--- a/style.css
+++ b/style.css
@@ -1,63 +1,35 @@
-body {
-  background-color: #eaf2f8;
-  color: #ffffff;
-  font-family: Arial, sans-serif;
+
+html {
+  background-color: gray;
 }
 
-.container {
-  max-width: 800px;
+img {
+  display: block;
   margin: 0 auto;
-  padding: 20px;
 }
 
-.section {
-  margin-bottom: 30px;
+body {
+  background-color: whitesmoke;
+  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
 }
 
-.section h2 {
-  color: #0099cc;
-}
+h1 {
+  color: Black; 
+  }
+  h2 {
+    color: Black;
+    }
+    h3 {
+      color: Black;
+      }
+      h4 {
+        color: Black;
+        }
+        h5 {
+          color: Black;
+          }
+          h6 {
+            color: Black;
+            }
 
-.section p {
-  margin-bottom: 10px;
-}
-
-.section ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.section ul li {
-  margin-bottom: 5px;
-}
-
-.section ul li:before {
-  content: "•";
-  margin-right: 5px;
-  color: #0099cc;
-}
-
-.section .highlight {
-  background-color: #ffffff;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.section .highlight p {
-  margin-bottom: 0;
-}
-
-.section .highlight h3 {
-  margin-bottom: 10px;
-}
-
-.section .highlight ul {
-  margin-left: 20px;
-}
-
-.section .highlight ul li:before {
-  content: "▸";
-  margin-right: 5px;
-  color: #0099cc;
-}
